# sillyoldbot

./: .gitignore  pyproject.toml
data/: tweet-sized-pooh.txt
sillyoldbot/: __init__.py  auth.py  whereami.py
tests/: test_sillyoldbot.py
