[tool.poetry]
name = "sillyoldbot"
version = "0.1.0"
description = ""
authors = ["Elia Robyn Lake <gh@arborelia.net>"]

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
